Add link to examples on infinity-calendar

--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -22,9 +22,14 @@
   <h2 slot=header>&lt;Infinity-Calendar&gt;</h2>
   <ul slot=subheader>
     <li>
+      <a Title='See more componentexamples' href=/examples>See more component examples</a>
+
+    <li>
       <a target=external href=http://jessewolgamott.com/react-calendar-table-example>react-calendar-table-example</a>
+
     <li>
       <a target=external href=http://teuxdeux.com>http://teudeux.com</a>
+
   </ul>
 </header-group>
 
