Add link to examples on list-filter

--- a/examples/filter.html
+++ b/examples/filter.html
@@ -11,7 +11,8 @@
 <link rel=import href=/examples/header-group>
 
 <header-group>
-  <h2 slot=header>Filter List</h2>
+  <h2 slot=header>&lt;list-filter&gt;</h2>
+  <a  slot=subheader Title='See more componentexamples' href=/examples>See more component examples</a>
 </header-group>
 <!-- import works inline body -->
 
