Add link to examples on input-output

--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -13,6 +13,7 @@
 
 <header-group>
   <h2 slot=header>&lt;input-output&gt;</h2>
+  <a  slot=subheader Title='See more componentexamples' href=/examples>See more component examples</a>
 </header-group>
 <!-- import works inline body -->
 <link rel=import href=/examples/header-group>
