Add link to examples on auto-complete

--- a/examples/autocomplete.html
+++ b/examples/autocomplete.html
@@ -9,7 +9,8 @@
 <script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
 
 <header-group>
-  <h2 slot=header>Autocomplete Dropdown</h2>
+  <h2 slot=header>&lt:auto-complete&gt;</h2>
+  <a  slot=subheader Title='See more componentexamples' href=/examples>See more component examples</a>
 </header-group>
 <!-- import works inline body -->
 <link rel=import href=/examples/header-group>
