Add link to examples on party-line

--- a/examples/party-line.html
+++ b/examples/party-line.html
@@ -10,7 +10,7 @@
 
 <header-group>
   <h2 slot=header>&lt;party-line&gt;</h2>
-  <h3 slot=subheader>Skype / Hangouts Clone</h3>
+  <a  slot=subheader Title='See more componentexamples' href=/examples>See more component examples</a>
 </header-group>
 
 <link rel=import href=/examples/header-group>
