Update documentation for settings

--- a/examples/weather-viewer/index.html
+++ b/examples/weather-viewer/index.html
@@ -72,6 +72,8 @@
 <p>Custom <a rel=external target=google href=https://developers.google.com/maps/documentation/geocoding/intro#geocoding>Geocode</a>&#32;element</p>
 
 <p>Choose your prefered weather api</p>
+<p><strong><a target=external href=http://openweathermap.org>OpenWeatherMap.org</a></strong> <em>(Default)</em></p>
+<p><em><a target=external href=http://openweathermap.org/appid>subscribe for Free API key</a></p>
 
 <h2>Settings</h2>
 
@@ -80,7 +82,19 @@
     <strong>location</strong>
 
   <dd>
-    A location settings
+    A location setting
+
+  <dt id=latitude>
+    <strong>latitude</strong>
+
+  <dd>
+    location latitude
+
+  <dt id=longitude>
+    <strong>longitude</strong>
+
+  <dd>
+    location longitude
 
 </dl>
 
