Update image slot

--- a/examples/weather-viewer/index.html
+++ b/examples/weather-viewer/index.html
@@ -10,7 +10,7 @@
 
 <weather-viewer latitude={latitude} longitude={longitude}>
 
-  <img src={image} alt={name}>
+  <img slot=image src={image} alt={name}>
   <h1>Today in {name} the temperature is <strong>{temperature}</strong></h1>
 
 </weather-viewer>
