--- a/examples/weather-viewer/index.html
+++ b/examples/weather-viewer/index.html
@@ -25,8 +25,20 @@
     static get latitude ()
       { return '40.7128° N' }
 
+    get latitude () {
+      return this.getAttribute ('latitude')
+        && this.getAttribute ('latitude').value
+        || this.constructor.latitude
+    }
+
     static get longitude ()
       { return '74.0059° W' }
+
+    get longitude () {
+      return this.getAttribute ('longitude')
+        && this.getAttribute ('longitude').value
+        || this.constructor.longitude
+    }
 
     initialize () {
       this.context.city =
