--- a/examples/weather-viewer/index.html
+++ b/examples/weather-viewer/index.html
@@ -22,6 +22,9 @@
 
   (class extends HTMLElement {
 
+    static get key () // from openweathermap.org
+      { return '62b74592e7bde09ede21693bce86460a' }
+
     static get latitude ()
       { return '40.7128° N' }
 
