Componentize examples/infinity-calendar

--- a/examples/index.html
+++ b/examples/index.html
@@ -38,7 +38,7 @@
     <a title=&lt;add-subtract&gt; href=/examples/add-subtract.html>&lt;add-subtract&gt;</a>
 
   <li>
-    <a title=&lt;infinity-calendar&gt; href=/examples/infinity-calendar.html>&lt;infinity-calendar&gt;</a>
+    <a title=&lt;infinity-calendar&gt; href=/examples/infinity-calendar>&lt;infinity-calendar&gt;</a>
 
   <li>
     <a title=&lt;filter&gt; href=/examples/filter.html>&lt;filter&gt;</a>
