--- a/examples/user-list/index.html
+++ b/examples/user-list/index.html
@@ -1,6 +1,6 @@
 <script nomodule src=/snuggsi.es></script>
 <script nomodule src=https://unpkg.com/rxjs/bundles/Rx.min.js></script>
-<script nomodule src="rxr.js"></script>
+<script nomodule src=rxr.js></script>
 
 <user-list>
   <h1>User list:</h1>
@@ -12,20 +12,17 @@
   </ul>
 </user-list>
 
-<script src=reactive.js></script>
-
+<script src=reactive-element.js></script>
+<script src=state.js></script>
 <script nomodule async defer>  
 
 Element `user-list`
-
-(class extends Reactive (HTMLElement) {
-  initialize () {
-    this.state = initialState
-  }
-
+(class extends Reactive 
+  (HTMLElement, userStore) {
+  
   static onclick ()
   { 
-    messageStreams.userClick()
+    userActions.userClick()
   }
 
   static onstatechange (state) {
@@ -37,6 +34,6 @@ Element `user-list`
   {
     return this.state.users
   }
-})   
+})
 
 </script>
