Fixed invalid method call, import snuggsi from cdn.

--- a/examples/user-list/index.html
+++ b/examples/user-list/index.html
@@ -1,4 +1,4 @@
-<script nomodule src=/snuggsi.es></script>
+<script nomodule src=//unpkg.com/snuggsi></script>
 <script nomodule src=https://unpkg.com/rxjs/bundles/Rx.min.js></script>
 <script nomodule src=rxr.js></script>
 
