--- a/index.html
+++ b/index.html
@@ -145,19 +145,33 @@ header-group a span {
   <ul>
     <li>
       <details open>
-        <summary>Interfaces</summary>
+        <summary><a href=#interfaces>Interfaces</a></summary>
 
         <ul>
           <li>
-            <a href=#element>Element</a>
+            <a href=#interfaces:element>Element</a>
 
           <li>
-            <a href=#template>Template</a>
+            <a href=#interfaces:template>Template</a>
 
       </details>
 
     <li>
-      <a href=#events>Events</a>
+      <details open>
+        <summary><a href=#events>Events</a></summary>
+
+        <ul>
+          <li>
+            <a href=#events:connect><em>(on)</em>connect</a>
+
+          <li>
+            <a href=#events:import><em>(on)</em>import</a>
+
+          <li>
+            <a href=#events:idle><em>(on)</em>idle</a>
+
+      </details>
+
 
     <li>
       <a href=#tokens>Tokens</a>
