--- a/examples/infinity-calendar/index.html
+++ b/examples/infinity-calendar/index.html
@@ -67,5 +67,5 @@
   <script src=infinity-calendar.es defer></script>
 </infinity-calendar>
 
-<script src=../../vendor/browser-sync.es></script>
+<script src=/browser-sync.es></script>
 
