Update dependencies for examples/infinity-calendar

--- a/examples/infinity-calendar/index.html
+++ b/examples/infinity-calendar/index.html
@@ -11,8 +11,8 @@
 
 </style>
 
-<script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=https://unpkg.com/snuggsi></script>
+<script nomodule src=/snuggsi/snuggsi.js></script>
+<script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <script src=/examples/infinity-calendar/infinity-calendar.es defer></script>
 
