Update unpkg.com/snuggsi dependency in examples/infinity-calendar

--- a/examples/infinity-calendar/index.html
+++ b/examples/infinity-calendar/index.html
@@ -11,7 +11,7 @@
 
 </style>
 
-<script nomodule src=/snuggsi/snuggsi.js></script>
+<script nomodule src=//unpkg.com/snuggsi></script>
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <script src=/examples/infinity-calendar/infinity-calendar.es defer></script>
