Update browsersync location for input-output

--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -49,4 +49,4 @@ Element `input-output`
 
 </input-output>
 
-<script src=../../vendor/browser-sync.es></script>
+<script src=/browser-sync.es></script>
