--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -6,7 +6,7 @@
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
 <script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
+<script nomodule src=/snuggsi/snuggsi.js></script>
 
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
