--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -30,7 +30,7 @@
 <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/output -->
 <output for=message>{echo}</output>
 
-<input id=message placeholder='HELLO...hello...'>
+<input id=message placeholder='HELLO…hello…'>
 
 <script>
 
