Fix header-group location

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ console.log ('nomodule')
 <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base -->
 <!--<base href=//localhost:8181>-->
 
-<link rel=import href=/examples/header-group.html>
+<link rel=import href=/examples/header-group>
 <style>
 h1 a:link {
   text-decoration: none;
