Update navigation for conventions

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@ header-group a span {
 
     <li>
       <details open>
-        <summary>Conventions</summary>
+        <summary><a href=#conventions>Conventions</a></summary>
 
         <ul>
           <li>
-            <a title=Context href=#context>Context</a>
+            <a title=Context href=#conventions:context>Context</a>
 
       </details>
 
