--- a/examples/index.html
+++ b/examples/index.html
@@ -32,10 +32,16 @@
     <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
 
   <li>
+    <a title=&lt;add-subtract&gt; href=/examples/add-subtract.html>&lt;add-subtract&gt;</a>
+
+  <li>
+    <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
+
+  <li>
     <a title=&lt;x-flash&gt; href=/examples/x-flashy.html>&lt;x-flashy&gt;</a>
 
   <li>
-    <a title=&lt;add-subtract&gt; href=/examples/add-subtract.html>&lt;add-subtract&gt;</a>
+    <a title=&lt;fidget-spinner&gt; href=/examples/fidget-spinner>&lt;fidget-spinner&gt;</a>
 
   <li>
     <a title=&lt;infinity-calendar&gt; href=/examples/infinity-calendar>&lt;infinity-calendar&gt;</a>
