--- a/index.html
+++ b/index.html
@@ -167,6 +167,16 @@ header-group a span {
           <li>
             <a href=#events:idle><em>(on)</em>idle</a>
 
+          <li>
+            <a href=https://developer.mozilla.org/en-US/docs/Web/API/GlobalEventHandlers>GlobalEventHandlers.<em>(on)</em>events</a>
+        </ul>
+
+        <footer>
+          <ul>
+            <li>
+              <a href=https://blog.garstasio.com/you-dont-need-jquery/events>Web Platform Event Conventions</a>
+          </ul>
+        </footer>
       </details>
 
 
