--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -37,9 +37,7 @@ Element `input-output`
 
 (class extends HTMLElement {
 
-  static oninput (event) {
-    console.dir (event.target)
-  }
+  static oninput () { }
 
   get echo () // tokenized property
     { return this.select ('input#message').value || '…' }
