Remove link download from input-output.html

--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -8,8 +8,7 @@
 <script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 <script nomodule src=/snuggsi/snuggsi.js></script>
 
-<link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
-<link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
+<link rel=icon type=image/png href=/favicon-16x16.png sizes=16x16>
 
 <header-group>
   <h2 slot=header>&lt;input-output&gt;</h2>
