--- a/examples/infinity-calendar/index.html
+++ b/examples/infinity-calendar/index.html
@@ -3,7 +3,7 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<script nomodule src=//unpkg.com/snuggsi></script>
+<script src=/></script>
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <script src=/examples/infinity-calendar/infinity-calendar.es defer></script>
