Update markup for infinity-calendar

--- a/examples/infinity-calendar/index.html
+++ b/examples/infinity-calendar/index.html
@@ -1,4 +1,4 @@
-<title>snuggsi ツ - Infinity Calendar</title>
+<title>snuggsi ツ - &lt;infinity-calendar&gt;</title>
 
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
@@ -6,7 +6,7 @@
 <script src=/></script>
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
-<script src=/examples/infinity-calendar/infinity-calendar.es defer></script>
+<script src=infinity-calendar/infinity-calendar.es defer></script>
 
 <link rel=import href=/examples/header-group>
 
@@ -17,7 +17,7 @@
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
 <header-group>
-  <h2 slot=header>&lt;Infinity-Calendar&gt;</h2>
+  <h2 slot=header>&lt;infinity-calendar&gt;</h2>
 
   <ul slot=subheader>
     <li>
