(temporarily) Remove header-group from calendar

--- a/examples/infinity-calendar/index.html
+++ b/examples/infinity-calendar/index.html
@@ -3,12 +3,10 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<script src=/></script>
+<script src=/snuggsi.es></script>
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <script src=infinity-calendar/infinity-calendar.es defer></script>
-
-<link rel=import href=/examples/header-group>
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 <!-- https://jakearchibald.com/2016/link-in-body -->
@@ -16,6 +14,8 @@
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
+<!--
+<link rel=import href=/examples/header-group>
 <header-group>
   <h2 slot=header>&lt;infinity-calendar&gt;</h2>
 
@@ -27,12 +27,12 @@
       <a target=external href=http://jessewolgamott.com/react-calendar-table-example>react-calendar-table-example</a>
 
     <li>
-      <a target=external href=http://teuxdeux.com>http://teudeux.com</a>
+      <a target=external href=http://teuxdeux.com>teudeux.com</a>
 
   </ul>
 
 </header-group>
-
+-->
 
 <infinity-calendar>
 
