--- a/examples/options-scanner.html
+++ b/examples/options-scanner.html
@@ -74,7 +74,7 @@ Element `options-settings`
 
 (class extends HTMLElement {
 
-  static onsubmit (event) {
+  onsubmit (event) {
     event.preventDefault ()
 
     console.log ('now you can shit')
