--- a/examples/x-flashy.html
+++ b/examples/x-flashy.html
@@ -55,7 +55,8 @@ Element `x-flashy`
 
   static get speed () { return 3000 }
 
-  static onclick (event) { console.log ('mole whacked') }
+  onclick (event)
+    { console.log ('mole whacked') }
 
   initialize () {
 
