--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -37,7 +37,7 @@ Element `input-output`
 
 (class extends HTMLElement {
 
-  static oninput () { }
+  oninput () { }
 
   get echo () // tokenized property
     { return this.select ('input#message').value || '…' }
