Update broken hello-world example links

--- a/examples/index.html
+++ b/examples/index.html
@@ -26,7 +26,7 @@
 
 <ul>
   <li>
-    <a href=/examples/hello-world.html>&lt;hello-world&gt;</a>
+    <a href=/examples/hello-world>&lt;hello-world&gt;</a>
 
   <li>
     <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
