Update webcomponents dependency

--- a/examples/header-group/example.html
+++ b/examples/header-group/example.html
@@ -3,11 +3,8 @@
 
 <title>&lt;header-group&gt;</title>
 
-<script nomodule src=//unpkg.com/snuggsi></script>
-<script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
-
-<link rel=stylesheet href=http://www.devpunks.com/typography.css>
-<link rel=icon type=image/png href=/favicon-16x16.png sizes=16x16>
+<script src=/snuggsi.es></script>
+<script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.min.js></script>
 
 <link rel=import href=/examples/header-group>
 
