Update webcomponents dependency

--- a/examples/header-group/example.html
+++ b/examples/header-group/example.html
@@ -3,8 +3,8 @@
 
 <title>&lt;header-group&gt;</title>
 
-<script src=/snuggsi.es></script>
-<script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.min.js></script>
+<script src=/></script>
+<script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=import href=/examples/header-group>
 
