--- a/examples/index.html
+++ b/examples/index.html
@@ -32,7 +32,7 @@
     <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
 
   <li>
-    <a title=&lt;add-subtract&gt; href=/examples/add-subtract.html>&lt;add-subtract&gt;</a>
+    <a title=&lt;add-subtract&gt; href=/examples/add-subtract>&lt;add-subtract&gt;</a>
 
   <li>
     <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
