--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -5,7 +5,7 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script nomodule src=/snuggsi/snuggsi.js></script>
+<script src=/></script>
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=icon type=image/png href=/favicon-16x16.png sizes=16x16>
