--- a/examples/add-subtract/index.html
+++ b/examples/add-subtract/index.html
@@ -4,45 +4,10 @@
 <meta name=viewport content=width=device-width,initial-scale=1>
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
+<link rel=stylesheet href=add-subtract/index.css>
 
 <script src=/snuggsi.es></script>
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
-
-<style>
-
-add-subtract {
-  width: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-}
-
-add-subtract output {
-  font-size: 5em;
-  text-align: center;
-  line-height: 1.612em;
-  background: var(--darkest-color)
-}
-
-add-subtract menu {
-  display: flex;
-  align-items: stretch;
-  justify-content: space-around;
-}
-
-add-subtract button {
-  margin: 0;
-  padding: 0;
-  width: 50%;
-  border: none;
-  cursor: pointer;
-  font-size: 300%;
-  display: inline-block;
-  color: var(--darkest-color);
-  background: var(--lightest-color)
-}
-
-</style>
 
 <header-group>
   <h2 slot=header>&lt;add-subtract&gt;</h2>
