Migrate script for add-subtract

--- a/examples/add-subtract/index.html
+++ b/examples/add-subtract/index.html
@@ -32,27 +32,6 @@
 
 </add-subtract>
 
-<script defer>
-
-Element `add-subtract`
-
-(class extends HTMLElement {
-
-  initialize ()
-    { this.context.count = 0 }
-
-  decrement ()
-    { this.context.count -- }
-
-  increment ()
-    { this.context.count ++ }
-
-  get count ()
-    { return this.context.count }
-
-})
-
-</script>
-
+<script src=./add-subtract/index.es></script>
 <script src=/browser-sync.es></script>
 
