--- a/examples/add-subtract/index.html
+++ b/examples/add-subtract/index.html
@@ -1,4 +1,4 @@
-<title>snuggsi ツ - Counter</title>
+<title>&lt;add-subtract&gt;</title>
 
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
