--- a/examples/add-subtract/index.html
+++ b/examples/add-subtract/index.html
@@ -6,7 +6,7 @@
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 <link rel=stylesheet href=add-subtract/index.css>
 
-<script src=/snuggsi.es></script>
+<script src=/></script>
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <header-group>
