Migrate hello-world styles to hello-world/index.css

--- a/examples/hello-world/index.html
+++ b/examples/hello-world/index.html
@@ -4,34 +4,9 @@
 <title>&lt;hello-world&gt;</title>
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
+<link rel=stylesheet href=hello-world/index.css>
 
 <style>
-
-  body
-    { display: flex; flex-flow: column }
-
-  hello-world
-    { cursor: pointer }
-
-figure {
-  display: flex;
-  flex-flow: row wrap;
-}
-
-figure iframe {
-  position: absolute;
-  right: 0;
-  width: 30vw;
-  min-height: 60vh;
-  margin: 0 14vw 0 0
-}
-
-figure iframe:first-of-type {
-  left: 0;
-  width: 42vw;
-  margin: 0 0 0 14vw
-}
-
 </style>
 
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
