Reorganize scrip/link order in index.html

--- a/index.html
+++ b/index.html
@@ -35,18 +35,19 @@
 <link rel=preload as=script href=https://unpkg.com/snuggsi@0.5.46/examples/webcomponents-hi-ce.js>
 
 <link rel=icon type=image/png href=/favicon-16x16.png sizes=16x16>
--->
-
-<script src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
-
-<script src=/></script>
-
-
 <link
   as=style
   rel=preload
   onload=this.rel='stylesheet'
   href=http://www.devpunks.com/typography.css>
+
+-->
+
+<script src=/></script>
+<script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
+
+<link rel=import href=/examples/header-group>
+<link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
 <style>
 // enough inline styles to paint to fold
