--- a/index.html
+++ b/index.html
@@ -59,15 +59,22 @@
 <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base -->
 <!--<base href=//localhost:8181>-->
 
-<link rel=import href=/examples/header-group>
 <style>
+:root {
+  --margin: 0 0;
+}
+body {
+  padding: 0;
+}
+
 h1 a:link {
   text-decoration: none;
-  border: none;
+  border: none
 }
-header-group a span {
-  opacity: 0.60;
-  font-size: 90%
+
+#badges {
+  width: 60vw;
+  margin: 0 20vw;
 }
 
 #badges img
