Refactor styles on index.html

--- a/index.html
+++ b/index.html
@@ -83,6 +83,46 @@ h1 a:link {
 #badges a:link
   { text-decoration: none; border-bottom: none }
 
+body > nav {
+  left: 0;
+  top: 20vh;
+  margin: 0;
+  width: 20vw;
+  height: auto;
+  min-width: 10rem;
+  min-height: 80vh;
+  text-align: left;
+  position: absolute;
+  color: rgba(0,0,0,0.7);
+  background: var(--lightest-color);
+}
+
+nav ul {
+  list-style-position: inside;
+}
+
+body > aside {
+  top: 0;
+  right: 0;
+  margin: 0;
+  width: 20vw;
+  height: auto;
+  text-align: left;
+  min-width: 10rem;
+  min-height: 100vh;
+  background: black;
+  position: absolute;
+}
+
+header-group {
+  height: 20vh;
+}
+
+header-group a span {
+  opacity: 0.60;
+  font-size: 90%
+}
+
 </style>
 
 <header-group>
