Migrate badges to header-group in index.html

--- a/index.html
+++ b/index.html
@@ -128,36 +128,36 @@ header-group a span {
 <header-group>
   <h2 slot=header>
     Easy Web Components in
-    <a target=github href=https://github.com/devpunks/snuggsi/tree/master/dist#readme>1Kb</a>
+    <a target=github href=https://github.com/devpunks/snuggsi/tree/master/dist#readme>~ 1Kb</a>
   </h2>
+
+  <section slot=subheader id=badges>
+    <a href=https://npmjs.org/package/snuggsi>
+      <img alt='NPM monthly downloads' src=https://img.shields.io/npm/dm/snuggsi.svg?style=flat>
+    </a>
+
+    <a href=https://github.com/devpunks/snuggsi/tree/master/dist#readme>
+      <img alt='Brotli size' src=https://img.shields.io/badge/Brotli%20size:-~%201Kb-ff69b4.svg>
+    </a>
+
+    <a href=https://www.npmjs.com/package/snuggsi>
+      <img src=https://img.shields.io/npm/v/snuggsi.svg alt='npm version'>
+    </a>
+
+    <a href=https://david-dm.org/devpunks/snuggsi target=external>
+      <img src=https://david-dm.org/devpunks/snuggsi/status.svg alt='dependency status'>
+    </a>
+
+    <a href=https://github.com/devpunks/snuggsi/blob/master/LICENSE.txt target=external>
+      <img src=https://img.shields.io/npm/l/snuggsi.svg alt=license>
+    </a>
+
+    <a href=https://github.com/devpunks/snuggsi/issues target=external>
+      <img src=https://img.shields.io/badge/PRs-welcome-brightgreen.svg alt='Pull requests welcome!'>
+    </a>
+
+  </section>
 </header-group>
-
-<section id=badges>
-  <a href=https://npmjs.org/package/snuggsi>
-    <img alt='NPM monthly downloads' src=https://img.shields.io/npm/dm/snuggsi.svg?style=flat>
-  </a>
-
-  <a href=https://github.com/devpunks/snuggsi/tree/master/dist#readme>
-    <img alt='Brotli size' src=https://img.shields.io/badge/Brotli%20size:-~%201Kb-ff69b4.svg>
-  </a>
-
-  <a href=https://www.npmjs.com/package/snuggsi>
-    <img src=https://img.shields.io/npm/v/snuggsi.svg alt='npm version'>
-  </a>
-
-  <a href=https://david-dm.org/devpunks/snuggsi target=external>
-    <img src=https://david-dm.org/devpunks/snuggsi/status.svg alt='dependency status'>
-  </a>
-
-  <a href=https://github.com/devpunks/snuggsi/blob/master/LICENSE.txt target=external>
-    <img src=https://img.shields.io/npm/l/snuggsi.svg alt=license>
-  </a>
-
-  <a href=https://github.com/devpunks/snuggsi/issues target=external>
-    <img src=https://img.shields.io/badge/PRs-welcome-brightgreen.svg alt='Pull requests welcome!'>
-  </a>
-
-</section>
 
 <nav>
 <!-- https://vuejs.org/v2/guide -->
