Move custom element examples to right aside

--- a/index.html
+++ b/index.html
@@ -164,12 +164,10 @@ header-group a span {
 <!-- http://aurelia.io/consulting.html -->
 <!-- https://skatejs.gitbooks.io/skatejs/content -->
   <header>Getting Started</header>
+
   <ul>
     <li>
       <a href=#installation>Installation</a>
-
-    <li>
-      <a title=Examples href=examples>Examples</a>
 
     <li>
       <a href=#lifecycle>Lifecycle</a>
@@ -238,7 +236,15 @@ header-group a span {
 
 <main></main>
 
-<aside></aside>
+<aside>
+  <nav>
+    <header><a title='More Examples' href=/examples>Examples</header>
+
+    <ul>
+      <li>
+        <a href=/examples#hello-world>&lt;hello-world&gt;</a>
+  </nav>
+</aside>
 
 <footer></footer>
 
