Close details lists in main nav on index.html

--- a/index.html
+++ b/index.html
@@ -187,7 +187,10 @@ header-group a span {
   <header>Documentation</header>
   <ul>
     <li>
-      <details open>
+      <a title=Context href=#conventions:context>Context</a>
+
+    <li>
+      <details>
         <summary><a href=#interfaces>Interfaces</a></summary>
 
         <ul>
@@ -200,7 +203,7 @@ header-group a span {
       </details>
 
     <li>
-      <details open>
+      <details>
         <summary><a href=#events>Events</a></summary>
 
         <ul>
