--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -6,6 +6,7 @@
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
 <script src=/></script>
+<script nomodule src=/snuggsi.min.es></script>
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <input-output>
