Rearrange main layout

--- a/index.html
+++ b/index.html
@@ -68,22 +68,31 @@ body {
 }
 
 #badges {
+  padding: 0;
+  text-align: center
 }
 
-#badges img
-  { width: auto; height: 1rem }
+#badges img {
+  width: auto;
+  height: 0.9rem;
+  margin: 0.6em 0.4em 0
+}
 
-#badges a:link
-  { text-decoration: none; border-bottom: none }
+#badges a:link {
+  margin: 0;
+  height: 1rem;
+  text-decoration: none;
+  border-bottom: none
+}
 
 body > nav {
   left: 0;
-  top: 20vh;
+  top: 18vh;
   margin: 0;
   width: 20vw;
   height: auto;
   min-width: 10rem;
-  min-height: 80vh;
+  min-height: 82vh;
   text-align: left;
   position: absolute;
   color: rgba(0,0,0,0.7);
