--- a/index.html
+++ b/index.html
@@ -105,20 +105,23 @@ nav ul {
 
 body > aside {
   right: 0;
-  top: 20vh;
+  top: 18vh;
   margin: 0;
   width: 20vw;
   height: auto;
   text-align: left;
   min-width: 10rem;
-  min-height: 100vh;
+  min-height: 82vh;
   background: black;
   position: absolute;
 }
 
 header-group {
-  height: 20vh;
+  height: 18vh;
+  line-height: 1.612em;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 header-group h1, header-group h2
