Fix underlining of nav and aside

--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@ nav ul {
   list-style-position: inside;
 }
 
+body > aside a:link,
+body > nav a:link {
+  border-bottom: none;
+}
+
+body > aside a:hover,
+body > nav a:hover {
+  border-bottom: 2px solid;
+}
+
 body > aside {
   right: 0;
   top: 18vh;
