Center headers for nav and aside on index.html

--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@ body > nav a:hover {
   border-bottom: 2px solid;
 }
 
+body > aside header,
+body > nav header {
+  text-align: center;
+}
+
 body > aside {
   right: 0;
   top: 18vh;
