--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ header-group a span {
       <a href=#lifecycle>Lifecycle</a>
 
     <li>
-      <details open>
+      <details>
         <summary><a href=#conventions>Conventions</a></summary>
 
         <ul>
