Remove protocols from badges

--- a/index.html
+++ b/index.html
@@ -165,24 +165,24 @@ header-group a span {
       <img alt='NPM monthly downloads' src=https://img.shields.io/npm/dm/snuggsi.svg?style=flat>
     </a>
 
-    <a href=https://github.com/devpunks/snuggsi/tree/master/dist#readme>
+    <a href=//github.com/devpunks/snuggsi/tree/master/dist#readme>
       <img alt='Brotli size' src=https://img.shields.io/badge/Brotli%20size:-~%201Kb-ff69b4.svg>
     </a>
 
-    <a href=https://www.npmjs.com/package/snuggsi>
-      <img src=https://img.shields.io/npm/v/snuggsi.svg alt='npm version'>
+    <a href=//www.npmjs.com/package/snuggsi>
+      <img src=//img.shields.io/npm/v/snuggsi.svg alt='npm version'>
     </a>
 
-    <a href=https://david-dm.org/devpunks/snuggsi target=external>
-      <img src=https://david-dm.org/devpunks/snuggsi/status.svg alt='dependency status'>
+    <a href=//david-dm.org/devpunks/snuggsi target=external>
+      <img src=//david-dm.org/devpunks/snuggsi/status.svg alt='dependency status'>
     </a>
 
-    <a href=https://github.com/devpunks/snuggsi/blob/master/LICENSE.txt target=external>
-      <img src=https://img.shields.io/npm/l/snuggsi.svg alt=license>
+    <a href=//github.com/devpunks/snuggsi/blob/master/LICENSE.txt target=external>
+      <img src=//img.shields.io/npm/l/snuggsi.svg alt=license>
     </a>
 
-    <a href=https://github.com/devpunks/snuggsi/issues target=external>
-      <img src=https://img.shields.io/badge/PRs-welcome-brightgreen.svg alt='Pull requests welcome!'>
+    <a href=//github.com/devpunks/snuggsi/issues target=external>
+      <img src=//img.shields.io/badge/PRs-welcome-brightgreen.svg alt='Pull requests welcome!'>
     </a>
 
   </section>
