Reorganize attributes for badges

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ header-group a span {
     </a>
 
     <a href=//www.npmjs.com/package/snuggsi>
-      <img src=//img.shields.io/npm/v/snuggsi.svg alt='npm version'>
+      <img alt='npm version' src=//img.shields.io/npm/v/snuggsi.svg>
     </a>
 
     <a href=//david-dm.org/devpunks/snuggsi target=external>
