Reorganize attributes for badges

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ header-group a span {
     </a>
 
     <a href=//david-dm.org/devpunks/snuggsi target=external>
-      <img src=//david-dm.org/devpunks/snuggsi/status.svg alt='dependency status'>
+      <img alt='dependency status' src=//david-dm.org/devpunks/snuggsi/status.svg>
     </a>
 
     <a href=//github.com/devpunks/snuggsi/blob/master/LICENSE.txt target=external>
