Reorganize attributes for badges

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ header-group a span {
     </a>
 
     <a href=//github.com/devpunks/snuggsi/blob/master/LICENSE.txt target=external>
-      <img src=//img.shields.io/npm/l/snuggsi.svg alt=license>
+      <img alt=license src=//img.shields.io/npm/l/snuggsi.svg>
     </a>
 
     <a href=//github.com/devpunks/snuggsi/issues target=external>
