Reorganize attributes for badges

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ header-group a span {
     </a>
 
     <a href=//github.com/devpunks/snuggsi/issues target=external>
-      <img src=//img.shields.io/badge/PRs-welcome-brightgreen.svg alt='Pull requests welcome!'>
+      <img alt='Pull requests welcome!' src=//img.shields.io/badge/PRs-welcome-brightgreen.svg>
     </a>
 
   </section>
