First view section #installation

--- a/index.html
+++ b/index.html
@@ -266,7 +266,11 @@ header-group a span {
 </nav>
 
 <main>
-  Hello World!
+
+<section view id=installation>
+  Installation
+</section>
+
 </main>
 
 <aside>
