margin styling for main

--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@ nav ul {
   list-style-position: inside;
 }
 
+body > main {
+  margin: 0 20vw;
+  background: red;
+}
+
 body > aside {
   right: 0;
   top: 18vh;
