Remove margin from bottom of header-group

--- a/index.html
+++ b/index.html
@@ -138,9 +138,10 @@ body > aside {
 
 header-group {
   height: 18vh;
-  line-height: 1.612em;
   display: flex;
+  margin-bottom: 0;
   align-items: center;
+  line-height: 1.612em;
   justify-content: center;
 }
 
