Add height sizing for main > [view]

--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@ body > main {
   background: red;
 }
 
+[view] {
+  background: pink;
+  height: 82vh;
+}
+
 body > aside {
   right: 0;
   top: 18vh;
@@ -140,6 +145,7 @@ header-group {
   height: 18vh;
   display: flex;
   margin-bottom: 0;
+  border-bottom: none;
   align-items: center;
   line-height: 1.612em;
   justify-content: center;
