--- a/index.html
+++ b/index.html
@@ -284,7 +284,13 @@ header-group a span {
 <main>
 
 <section view id=installation>
-  Installation
+  <h1>Installation</h1>
+
+</section>
+
+<section view id=lifecycle>
+  <h1>Lifecycle</h1>
+
 </section>
 
 </main>
