Migrate context into proper section

--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@ header-group a span {
         <summary><a href=#conventions>Conventions</a></summary>
 
         <ul>
-          <li>
-            <a title=Context href=#conventions:context>Context</a>
+          <li></li>
 
       </details>
 
@@ -230,9 +229,6 @@ header-group a span {
 
   <header>Documentation</header>
   <ul>
-    <li>
-      <a title=Context href=#conventions:context>Context</a>
-
     <li>
       <details>
         <summary><a href=#interfaces>Interfaces</a></summary>
@@ -276,6 +272,9 @@ header-group a span {
     <li>
       <!-- http://blog.aurelia.io/2016/05/23/aurelia-shadow-dom-v1-slots-prerelease -->
       <a href=#slots>Slots</a>
+
+    <li>
+      <a title=Context href=#context>Context</a>
 
   </ul>
 
