Use abbreviation for Kilobyte

--- a/index.html
+++ b/index.html
@@ -171,9 +171,10 @@ header-group a span {
 </style>
 
 <header-group>
+
   <h2 slot=header>
     Easy Web Components in
-    <a target=github href=https://github.com/devpunks/snuggsi/tree/master/dist#readme>~ 1Kb</a>
+    <a target=github href=https://github.com/devpunks/snuggsi/tree/master/dist#readme>~ 1<abbr title=Kilobyte>Kb</abbr></a>
   </h2>
 
   <section slot=subheader id=badges>
