Fix link to hello-world example

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ header-group a span {
 
     <ul>
       <li>
-        <a href=/examples#hello-world>&lt;hello-world&gt;</a>
+        <a href=/examples/hello-world>&lt;hello-world&gt;</a>
   </nav>
 </aside>
 
